# ulamai

./: .gitignore  Makefile  install.sh  notes.txt  pyproject.toml  readme.md  run.jsonl
.github/workflows/: update-homebrew-tap.yml
.ulam/: config.json
bench/: README.md  regression.jsonl
bench/suites/: internal_regression.jsonl  minif2f_dev.jsonl  putnambench_sample.jsonl  registry.json
bench_traces/: 001_irrational_sqrt_two_smoke.jsonl
docs/: benchmark_pipeline.md  pipeline.md  v0.2.1_plan.md
examples/: FormalizePolishOlympiad.tex  ProveTexPrimes.txt  README.md  Smoke.lean  UlamAI_Prover_Tutorial.ipynb  UlamAI_Prover_Tutorial.md  pol25.tex
homebrew-ulamai/Formula/: ulamai.rb
runs/formalize_20260212_201114/: config.json  input.tex  segments.json
scripts/: run_bench_campaign.sh  update_homebrew_tap.sh
tests/: test_bench_compare_gate.py  test_guardrail_budget_profiles.py  test_inference_profiles.py  test_llm_strategy_pivot.py  test_lsp_runner_helpers.py  test_menu_helpers.py  test_prove_tex_helpers.py  test_search_planner_helpers.py
ulam/: __init__.py  cli.py  config.py  menu.py  state.py  trace.py  types.py
ulam/auth/: __init__.py  claude.py  codex.py  gemini.py
ulam/formalize/: __init__.py  engine.py  llm.py  segment.py  segmentation.py  types.py
ulam/lean/: base.py  cli_check.py  dojo.py  lsp.py  lsp_runner.py  mock.py
ulam/llm/: __init__.py  anthropic.py  base.py  cli_claude.py  cli_codex.py  cli_gemini.py  cli_utils.py  gemini.py  mock.py  ollama.py  prompt.py  (+2 more)
ulam_prover.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
(+7 files in other folders)
